--- a/.github/workflows/entregas.yml
+++ b/.github/workflows/entregas.yml
@@ -10,30 +10,28 @@ jobs:
     permissions:
       contents: write
 
-
     steps:
-      - name: Paso 1 Checkout repo
+      - name: Paso 1 - Checkout repo
         uses: actions/checkout@v4
 
-      - name: Paso 2 Setup Python
+      - name: Paso 2 - Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.9.2'
-      - name: Paso 3 - crea entorno virtual
-        run: python -m venv venv
-      - name: Paso 4 - activar entorno virtual
-        run: ./venv/Scripts/activate   
-      - name: Paso 5 - actualizar pip
-        run: pip install --upgrade pip
-      - name: Paso 6 - instalar dependencias
-        run: pip install -e .
-      - name: Paso 7 - Ejecutar Script de main
+
+      - name: Paso 3 - Instalar dependencias
+        run: |
+          pip install --upgrade pip
+          pip install -e .
+
+      - name: Paso 4 - Ejecutar Script main
         run: python src/edu_piv/main.py
 
-      - name: Commit and Push changes
+      - name: Paso 5 - Commit y push de archivos actualizados
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Holan mundo action
+          commit_message: Entrega 2
           commit_user_name: Luis Pachon [GitHub Actions]
           commit_user_email: luis.pachon@est.iudigital.edu.co
           commit_author: Luis Pachon <luis.pachon@est.iudigital.edu.co>
+
